Bug 706320 - Incorrect output for '<' and '>' chars
Summary: Incorrect output for '<' and '>' chars
Status: RESOLVED FIXED
Alias: None
Product: MuPDF
Classification: Unclassified
Component: svg output (show other bugs)
Version: unspecified
Hardware: PC OpenBSD
: P4 normal
Assignee: Robin Watts
URL:
Keywords:
: 706458 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-01-10 14:17 UTC by manuel+ghostscript
Modified: 2023-03-08 22:30 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description manuel+ghostscript 2023-01-10 14:17:10 UTC
Hi,

The mutool output seems to produce incorrect SVG files for characters '<' and '>'.  This bug has already been reported (with a fix) on Debian's bug tracker:
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1028156

Best regards,
-- 
Manuel Giraud
Comment 1 Robin Watts 2023-01-10 16:24:50 UTC
Fixed here:

commit 4acecd4ef0777f447f5049c98a948f6c1c0060c1
Author: Robin Watts <Robin.Watts@artifex.com>
Date:   Tue Jan 10 16:05:45 2023 +0000

    Bug 706320: Avoid sending '<' or '>' chars unescaped in SVG output.

Thanks for the report.
Comment 2 Sebastian Rasmussen 2023-03-08 22:30:17 UTC
*** Bug 706458 has been marked as a duplicate of this bug. ***