augment commit 4acecd4ef0777f447f5049c98a948f6c1c0060c1 (Bug 706320: Avoid sending '<' or '>' chars unescaped in SVG output) :: complete the avoidance by also avoiding raw output in HTML/XML data attribute value fields for '<', '>', "'" (the apostrophe itself) *and* 0x007F: this character is not really printable and should be *encoded* like other non-printables.